[package]
name = "line-monsters"
version = "0.1.0"
authors = ["Ellen Nyan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ellecs = { git = "https://github.com/EllenNyan/Ellecs" }
wgpu = "0.6"
winit = "0.23"
ultraviolet = "0.7"
futures = "0.3"
bytemuck = "1.4"
image = "0.23"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
shaderc = "0.6"